changed version number

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>devinmcgloin</groupId>
     <artifactId>Java-Algorithms</artifactId>
-    <version>1.0</version>
+    <version>.1</version>
 
     <dependencies>
         <dependency>
